[package]
name = "mlw"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A file watcher that runs scripts on changes"
repository = "https://github.com/mnsdojo/mlw"

[dependencies]
colored = "2.1.0"
notify = "7.0.0"
serde_json = "1.0.133"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
regex = "1.11.1"
clap = { version = "4.4", features = ["derive"] }


[[bin]]
name = "mlw"
path = "src/main.rs"
